# boardgamerental

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
boardgamerental/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
games/: admin.py  models.py  tasks.py  tests.py  urls.py  views.py
games/migrations/: 0001_initial.py
games/templates/games/: all_rentals.html  base.html  detail.html  index.html  navbar.html  notifications.html  notifications_detail.html  rental_info.html  reservation_info.html  reservation_rental_info.html  return_confirm.html  user_rental.html  user_reservation.html
members/: forms.py  urls.py  views.py
members/templates/authenticate/: login.html  register.html
static/games/: style.css
static/members/: style.css
